# github-sentiment

./: .env.example  .gitignore  README.md  config.py  corpus_builder.py  docker-compose.yml  pipeline.py  pyproject.toml  需求说明.md
bert_labeler/: __init__.py
crawler/: __init__.py  github_client.py  service.py
llm_labeler/: __init__.py  prompts.py  service.py  validation.py
storage/: __init__.py  database.py  models.py
tests/: test_collector.py  test_corpus_builder.py  test_deepseek_labeler.py  test_github_client.py  test_repository_whitelist.py  test_storage.py  test_validation.py
