[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "github-sentiment"
version = "0.1.0"
description = "GitHub Rust community aspect-level sentiment data pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "PyMySQL>=1.1,<2",
  "python-dotenv>=1.0,<2",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[tool.setuptools]
py-modules = ["config", "corpus_builder", "pipeline"]
packages = ["crawler", "llm_labeler", "bert_labeler", "storage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
